--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-streamlit>=1.25.0
-pandas>=1.5.0
-numpy>=1.21.0
-matplotlib>=3.5.0
-seaborn>=0.11.2
-scikit-learn>=1.0.0
-causalml>=0.12.1
-plotly>=5.9.0
+streamlit
+pandas
+matplotlib
+seaborn
